sotre product table create
