# vts_server/app/src/apis/index.js
@@ -6,14 +6,7 @@ const router = express.Router()
 
 const liveThumbnailMulterSet = require('../middle/liveThumbnailMulter')
 const recResourceUpload = require('../middle/recUploadMulter')
-const testUpload = require('../middle/testUpload')
 const fileSizeFormatter = require('../helpers/fileUploaderController')
-<<<<<<< HEAD
-
-
-=======
-const testUpload = require('../middle/testUpload')
->>>>>>> a94ab28c583875491871a31f65e4212e1f2841cf
 const Models = require('../../../models')
 
 
@@ -179,111 +172,6 @@ router.post('/recordMediaUpload',recResourceUpload.array('resources',  2), async
     console.log(err)
     res.status(400).json(err)
   }
-})
-
-
-/**
- * 인터뷰 과제 
- */
-router.get('/userInfo', async(req,res)=>{
-  let userList = await Models.User.findAll({
-    attributes: ['User', 'Role', 'Msg', 'id']
-  })
-	console.log('get 요청')
-  return res.status(200).json(userList)
-})
-
-router.post('/registerUserInfo', async(req,res)=>{
-<<<<<<< HEAD
-  const [name, role, message] = req.body
-=======
-  const {name, role, message} = req.body
->>>>>>> a94ab28c583875491871a31f65e4212e1f2841cf
-  await Models.User.create({
-    User: name,
-    Role: role, 
-    Msg: message
-  })
-	console.log('post 요청')
-  return res.status(200).json('User Information Registered Successfully!')
-})
-
-router.put('/updateUserInfo', async(req,res) =>{
-<<<<<<< HEAD
-  const [id, name, role, message] = req.body
-=======
-  const {id, name, role, message} = req.body
->>>>>>> a94ab28c583875491871a31f65e4212e1f2841cf
-  await Models.User.update(
-   {User: name, Role: role, Msg: message},
-   {where: {id: id}}
-  )
-	console.log('put 요청')
-  return res.status(200).json('User Information Updated Successfully!')
-})
-
-router.delete('/deleteUserInfo', async(req,res)=>{
-<<<<<<< HEAD
-  const [id] = req.body
-=======
-  const {id} = req.body
->>>>>>> a94ab28c583875491871a31f65e4212e1f2841cf
-    await Models.User.destroy({
-    where: {id: id}
-  })
-	console.log('delete 요청')
-  return res.status(200).json('User Information Deleted Successfully!')
-})
-
-<<<<<<< HEAD
-
-
-=======
->>>>>>> a94ab28c583875491871a31f65e4212e1f2841cf
-/**
- * 인터뷰 과제2 
- */
-router.get('/contents', async(req,res)=>{
-  // let imagePath = 
-  let roomConfig = await Models.Room.findAll({
-    attributes: ['id', 'Image', 'Room', 'createdAt', 'updatedAt']
-  })
-<<<<<<< HEAD
-  console.log(roomConfig)
-=======
->>>>>>> a94ab28c583875491871a31f65e4212e1f2841cf
-  return res.status(200).json(roomConfig)
-})
-
-router.post('/createContent',testUpload.single('image'),async(req,res)=>{
-  const {room} = req.body
-  const {filename} = req.file
-
-  console.log(req.file)
-  console.log(req.body)
-  await Models.Room.create({
-    Image: filename,
-    Room: room
-  })
-  return res.status(200).json('Content Created Successfully!')
-})
-
-router.put('/updateContent', testUpload.single('image'),async(req,res)=>{
-  const {id, room} = req.body
-  const {filename} = req.file
-  await Models.Room.update({
-    Image: filename, Room: room},
-    {where: {id: id}}
-  )
-  return res.status(200).json('Content Information Updated Successfully!')
-})
-
-router.delete('/deleteContent', async(req,res)=>{
-  const {id} = req.body
-  await Models.Room.destroy({
-    where: {id: id}
-  })
-  return res.status(200).json('Content Information Deleted Successfully!')
 })
 
 module.exports = router
